--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
 </head>
-<body>
+<body class="homepage-body">
 <!--Navigator-bar-->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -79,18 +79,17 @@
                     <a class="nav-link" href="#">Thể thao</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/thecup/template/search.html">
+                    <button class="btn" id="searchBtn">
                         <i class="fas fa-search"></i>
-                    </a>
+                    </button>
                 </li>
             </ul>
             <div class="nav-register">
-                <a href="/thecup/template/login.html" class="">
-                    <button class="btn btn-light" type="submit">Đăng nhập</button>
-                </a>
-                <a href="/thecup/template/register.html" class="">
-                    <button class="btn btn-light ms-1" type="submit">Đăng ký</button>
-                </a>
+
+                <button class="btn btn-light" type="submit" id="loginBtn">Đăng nhập</button>
+
+
+                <button class="btn btn-light ms-1" type="submit" id="registerBtn">Đăng ký</button>
 
             </div>
         </div>
@@ -450,6 +449,124 @@
 </div>
 <!--News-end-->
 <!--Footer-start-->
+<!--Login-start-->
+<div id="loginBody" class="login-body">
+<div class="logo-thecup">
+    <img src="/thecup/resources/img/logo-login-register.svg" alt="">
+</div>
+<div class="register-holder">
+    <div class="upper">
+        <p class="reg-title">Đăng nhập</p>
+        <div class="oauth-button">
+            <button class="btn btn-primary btn-facebook">
+                <img src="/thecup/resources/img/Button/facebook.svg" alt="">
+                <span>Facebook</span>
+            </button>
+            <button class="btn btn-outline-success btn-google">
+                <img src="/thecup/resources/img/Button/google.svg" alt="">
+                <span>Google</span>
+            </button>
+        </div>
+        <div class="divider"></div>
+        <p class="username">Email hoặc tên đăng nhập</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Email hoặc tên đăng nhập" aria-label="Recipient's username with two button addons">
+        </div>
+        <p class="password">Mật khẩu</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Mật khẩu của bạn" aria-label="Recipient's username with two button addons">
+        </div>
+        <a href="/thecup/template/my_account.html">
+            <button class="btn btn-primary btn-reg">Đăng nhập</button>
+        </a>
+        <a href="">
+            <p class="forgot-password">Bạn quên mật khẩu?</p>
+        </a>
+    </div>
+    <div class="lower">
+        <div class="login-block">
+            <span class="text">Bạn chưa có tài khoản?</span>
+            <a href="/thecup/template/register.html">
+                <span class="login">Đăng ký ngay</span>
+            </a>
+        </div>
+    </div>
+</div>
+<div class="exit-button">
+    <button class="btn" id="exitLoginFormBtn">
+        <div class="border">
+        <span class="material-icons material-icons-outlined">
+            close
+        </span>
+        </div>
+        <p>Đóng</p>
+    </button>
+</div>
+</div>
+<div id="registerBody" class="register-body">
+<div class="logo-thecup">
+    <img src="/thecup/resources/img/logo-login-register.svg" alt="">
+</div>
+<div class="register-holder">
+    <div class="upper">
+        <p class="reg-title">Đăng ký</p>
+        <div class="oauth-button">
+            <button class="btn btn-primary btn-facebook">
+                <img src="/thecup/resources/img/Button/facebook.svg" alt="">
+                <span>Facebook</span>
+            </button>
+            <button class="btn btn-outline-success btn-google">
+                <img src="/thecup/resources/img/Button/google.svg" alt="">
+                <span>Google</span>
+            </button>
+        </div>
+        <div class="divider"></div>
+        <p class="username">Họ và tên</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Họ và tên viết có dấu" aria-label="Recipient's username with two button addons">
+        </div>
+        <p class="email">Email</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="email@gmail.com" aria-label="Recipient's username with two button addons">
+        </div>
+        <p class="password">Mật khẩu</p>
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Mật khẩu của bạn" aria-label="Recipient's username with two button addons">
+        </div>
+        <button class="btn btn-primary btn-reg">Đăng ký</button>
+    </div>
+    <div class="lower">
+        <div class="login-block">
+            <span class="text">Bạn đã có tài khoản?</span>
+            <a href="/thecup/template/login.html">
+                <span class="login">Đăng nhập ngay</span>
+            </a>
+        </div>
+    </div>
+</div>
+<div class="exit-button">
+    <button class="btn" id="exitRegFormBtn">
+        <div class="border">
+        <span class="material-icons material-icons-outlined">
+            close
+        </span>
+        </div>
+        <p>Đóng</p>
+    </button>
+</div>
+</div>
+<div class="search-popup-body" id="searchPopupBody">
+    <div class="search-popup-holder">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Tìm kiếm theo từ khóa, chủ đề, tên bài viết" aria-label="Recipient's username with two button addons">
+        </div>
+        <button class="btn">
+            <a href="/thecup/template/search.html">
+                <i class="fas fa-search"></i>
+            </a>
+        </button>
+    </div>
+</div>
 <footer class="footer-holder">
     <div class="footer-upper">
         <div class="container d-flex">
@@ -464,9 +581,7 @@
                             <a href="/thecup/template/economy.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <p class="content-box-icon material-icons">
-                                            track_changes
-                                        </p>
+                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_economy.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Kinh tế</p>
@@ -478,9 +593,7 @@
                             <a href="/thecup/template/life.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <p class="content-box-icon material-icons">
-                                            track_changes
-                                        </p>
+                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_life.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Sống</p>
@@ -492,9 +605,7 @@
                             <a href="/thecup/template/economy.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <p class="content-box-icon material-icons">
-                                            track_changes
-                                        </p>
+                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_tech.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Công nghệ</p>
@@ -506,9 +617,7 @@
                             <a href="/thecup/template/economy.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <p class="content-box-icon material-icons">
-                                            track_changes
-                                        </p>
+                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_art.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Nghệ thuật</p>
@@ -520,9 +629,7 @@
                             <a href="/thecup/template/economy.html">
                                 <div class="footer-content-box">
                                     <div class="footer-content-box-inner">
-                                        <p class="content-box-icon material-icons">
-                                            track_changes
-                                        </p>
+                                        <img class="content-box-icon material-icons" src="/thecup/resources/img/icon/ic_sport.svg">
                                         <div class="content-box-divider1"></div>
                                         <div class="content-box-divider2"></div>
                                         <p class="content-box-cat-name">Thể thao</p>
@@ -539,10 +646,18 @@
         <div class="container">
             <div class="social-connect">
                 <span class="social-connect-text">Kết nối với chúng tôi</span>
-                <span class="social-connect-icon material-icons">facebook</span>
-                <span class="social-connect-icon material-icons">play_arrow</span>
-                <span class="social-connect-icon material-icons">camera_alt</span>
-                <span class="social-connect-icon material-icons">sick</span>
+                <div class="social-connect-icon">
+                    <img src="/thecup/resources/img/icon/ic_facebook.svg" alt="">
+                </div>
+                <div class="social-connect-icon">
+                    <img src="/thecup/resources/img/icon/ic_youtube.svg" alt="">
+                </div>
+                <div class="social-connect-icon">
+                    <img src="/thecup/resources/img/icon/ic_instagram.svg" alt="">
+                </div>
+                <div class="social-connect-icon">
+                    <img src="/thecup/resources/img/icon/ic_twitter.svg" alt="">
+                </div>
             </div>
             <div class="divider"></div>
             <div class="the-cup-signature-holder d-flex">
