--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
 </head>
-<body class="homepage-body">
+<body class="homepage-body" id="homePageBody">
 <!--Navigator-bar-->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
