--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"/>
 </head>
-<body class="homepage-body" id="homePageBody">
+<body class="homepage-body" id="homePageBody" style="touch-action: auto">
 <!--Navigator-bar-->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
@@ -200,14 +200,12 @@
                             <span> / </span>
                             <span id="duration" class="total-time">0:00</span>
                         </div>
-                        <div class="volume-holder">
-                            <span class="material-icons material-icons-outlined">volume_up</span>
-                            <div class="progress" id="volumeProgressWrapper" style="visibility: hidden">
-                                <div id="volProgress" class="progress-bar" role="progressbar" style="width: 80%;"
-                                     aria-valuenow="25"
-                                     aria-valuemin="0" aria-valuemax="100"></div>
+                        <button class="btn volume-holder">
+                            <span class="material-icons material-icons-outlined" id="volumeHolder">volume_up</span>
+                            <div class="volume-bar" id="volumeProgressWrapper" style="display: none">
+                                <input type="range" min="0" max="100" value="80" class="slider" id="volProgress">
                             </div>
-                        </div>
+                        </button>
                         </button>
                     </div>
                 </div>
@@ -725,11 +723,11 @@
             <input type="text" class="form-control" placeholder="Tìm kiếm theo từ khóa, chủ đề, tên bài viết"
                    aria-label="Recipient's username with two button addons">
         </div>
+
+        <a href="/thecup/template/search.html">
         <button class="btn">
-            <a href="/thecup/template/search.html">
-                <i class="fas fa-search"></i>
-            </a>
-        </button>
+          <i class="fas fa-search"></i>
+        </button></a>
     </div>
 </div>
 <footer class="footer-holder">
