fix restricted popup

--- a/index.html
+++ b/index.html
@@ -260,23 +260,26 @@
                     <div class="hightlight-lower d-flex">
                         <div class="lower-left me-auto">
                             <div class="hightlight-small-block">
-                                <div class="hightlight-arcticle">
-                                    <p>Sống</p>
-                                    <img src="resources/img/highlight/highlight-small-2.png" alt="">
-                                </div>
-                                <p class="article-datetime">Ngày 20 tháng 5, 2020</p>
-                                <p class="article-title">Những bức ảnh chưa được tiết lộ về thế chiến thứ nhất</p>
+                                <a href="/thecup/template/restricted_podcast_single.html">
+                                    <div class="hightlight-arcticle">
+                                        <p>Sống</p>
+                                        <img src="resources/img/highlight/highlight-small-2.png" alt="">
+                                    </div>
+                                    <p class="article-datetime">Ngày 20 tháng 5, 2020</p>
+                                    <p class="article-title">Podcast bị giới hạn</p>
+                                </a>
                             </div>
                         </div>
                         <div class="lower-right ms-auto">
                             <div class="hightlight-large-block">
-                                <div class="hightlight-arcticle">
-                                    <p>Nghệ thuật</p>
-                                    <img src="resources/img/highlight/highlight-large-2.png" alt="">
-                                </div>
-                                <p class="article-datetime">Ngày 13 tháng 5, 2020</p>
-                                <p class="article-title">Phân tích tác phẩm tiếng thét, sự thật đằng sau nó
-                                    còn đáng giá hơn rất nhiều</p>
+                                <a href="/thecup/template/restricted_image_post.html">
+                                    <div class="hightlight-arcticle">
+                                        <p>Nghệ thuật</p>
+                                        <img src="resources/img/highlight/highlight-large-2.png" alt="">
+                                    </div>
+                                    <p class="article-datetime">Ngày 13 tháng 5, 2020</p>
+                                    <p class="article-title">Image post bị giới hạn</p>
+                                </a>
                             </div>
                         </div>
                     </div>
