--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
         </div>
     </div>
 </nav>
+
+
 <!--Navigator-bar-end-->
 <!--Carousel-start-->
 <div class="carousel-holder">
@@ -209,7 +211,7 @@
                             <div class="row">
                                 <div class="col-12 col-md-4">
                                     <button class="btn btn-primary play-button d-flex align-items-center"
-                                    id="playAllBtn">
+                                    id="playAllBtn" onclick="loadPlaylist(soundObj)">
                                         <i class="fas fa-play"></i>
                                         <span class="ms-auto">Nghe tất cả</span>
                                     </button>
@@ -1040,12 +1042,28 @@
     </div>
 </footer>
 <!--Footer-end-->
+
+<script>
+    soundObj = {
+        sound: [
+            {
+                "name": "Bài hát số 1",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/345413aabdef399c9daa9ad8f59a071f.mp3"
+            },
+            {
+                "name": "Bài hát số 2",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
+            }
+        ]
+    };
+</script>
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.core.min.js"
         integrity="sha512-+wqa4/aOL4vwhL637A4p+6epqhUHDqpEfYJa1+PlzlMf908CSOb3xtIeKwZWh5Q0Q/R2nYUKxH4vvcQg+k8KKQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/main.js"></script>
 <script src="assets/js/player.js"></script>
+<script src="assets/js/main.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
 <script src="assets/owlcarousel/owl.carousel.min.js"></script>
 <script src="https://kit.fontawesome.com/16985780f3.js" crossorigin="anonymous"></script>
