--- a/index.html
+++ b/index.html
@@ -1053,6 +1053,10 @@
             {
                 "name": "Bài hát số 2",
                 "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
+            },
+            {
+                "name": "Hết thương cạn nhớ",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/Hết Thương Cạn Nhớ - Đức Phúc [Audio Lyrics].mp3"
             }
         ]
     };
