--- a/index.html
+++ b/index.html
@@ -874,13 +874,14 @@
         <span class="podcast-title">Hài lòng với nhưng thứ đã có sẽ làm bạn hạnh phúc hơn</span>
         <div class="dot-seperator"></div>
         <span class="podcast-name" id="track">Phần 2: Quẳng gánh lo đi mà sống</span>
+        <span class="podcast-name" id="soundState">(Đang tạm dừng)</span>
     </div>
     <div class="divider"></div>
     <div class="lower">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 button-holder">
-                    <button class="btn">
+                    <button class="btn" id="togglePlaylist">
                         <span class="material-icons smaterial-icons-outlined">playlist_play</span>
                     </button>
                     <button class="btn btn-speed" id="speedBtn1X">
@@ -920,7 +921,10 @@
             </div>
         </div>
     </div>
+    <div class="divider"></div>
+
 </div>
+<div class="soundlist-holder" id="soundListHolder" style="visibility: hidden"></div>
 <footer class="footer-holder">
     <div class="footer-upper">
         <div class="container d-flex">
@@ -1048,24 +1052,37 @@
         sound: [
             {
                 "name": "Bài hát số 1",
-                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/345413aabdef399c9daa9ad8f59a071f.mp3"
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
+            },
+            {
+                "name": "Hết thương cạn nhớ",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/Hết Thương Cạn Nhớ - Đức Phúc [Audio Lyrics].mp3"
             },
             {
                 "name": "Bài hát số 2",
                 "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
             },
             {
-                "name": "Hết thương cạn nhớ",
+                "name": "Hết thương cạn nhớ 2",
                 "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/Hết Thương Cạn Nhớ - Đức Phúc [Audio Lyrics].mp3"
-            }
+            },
+            {
+                "name": "Bài hát số 3",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
+            },
+            {
+                "name": "Hết thương cạn nhớ 3",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/Hết Thương Cạn Nhớ - Đức Phúc [Audio Lyrics].mp3"
+            },
         ]
     };
 </script>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.core.min.js"
-        integrity="sha512-+wqa4/aOL4vwhL637A4p+6epqhUHDqpEfYJa1+PlzlMf908CSOb3xtIeKwZWh5Q0Q/R2nYUKxH4vvcQg+k8KKQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.core.min.js"-->
+<!--        integrity="sha512-+wqa4/aOL4vwhL637A4p+6epqhUHDqpEfYJa1+PlzlMf908CSOb3xtIeKwZWh5Q0Q/R2nYUKxH4vvcQg+k8KKQ=="-->
+<!--        crossorigin="anonymous" referrerpolicy="no-referrer"></script>-->
 <script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/howler.min.js"></script>
 <script src="assets/js/player.js"></script>
 <script src="assets/js/main.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
