playlist update, purchase page fix

--- a/index.html
+++ b/index.html
@@ -1051,29 +1051,17 @@
     soundObj = {
         sound: [
             {
-                "name": "Bài hát số 1",
-                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
-            },
-            {
-                "name": "Hết thương cạn nhớ",
-                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/Hết Thương Cạn Nhớ - Đức Phúc [Audio Lyrics].mp3"
+                "name": "Chạm đáy nỗi đau",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/ChamDayNoiDau-ERIK-5441608.mp3'"
             },
             {
                 "name": "Bài hát số 2",
                 "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
             },
             {
-                "name": "Hết thương cạn nhớ 2",
+                "name": "Hết thương cạn nhớ",
                 "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/Hết Thương Cạn Nhớ - Đức Phúc [Audio Lyrics].mp3"
-            },
-            {
-                "name": "Bài hát số 3",
-                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
-            },
-            {
-                "name": "Hết thương cạn nhớ 3",
-                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/Hết Thương Cạn Nhớ - Đức Phúc [Audio Lyrics].mp3"
-            },
+            }
         ]
     };
 </script>
