--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="homepage-body" id="playerPageBody" style="touch-action: auto">
 <!--Navigator-bar-->
-<nav class="navbar navbar-expand-lg navbar-light">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container">
         <a class="navbar-brand" href="/thecup/">
             <img class="logo" height="40" src="resources/img/Logo.svg" alt="">
