--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body class="homepage-body" id="playerPageBody" style="touch-action: auto">
 <!--Navigator-bar-->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
         <a class="navbar-brand" href="/thecup/">
             <img class="logo" height="40" src="resources/img/Logo.svg" alt="">
@@ -1054,7 +1054,7 @@
 <script src="assets/js/howler.min.js"></script>
 <script src="assets/js/player.js"></script>
 <script src="assets/js/main.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
 <script src="assets/owlcarousel/owl.carousel.min.js"></script>
 <script src="https://kit.fontawesome.com/16985780f3.js" crossorigin="anonymous"></script>
 <script>
