--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon material-icons material-icons-outlined">
-            menu
-            </span>
+<!--            <span class="navbar-toggler-icon material-icons material-icons-outlined">-->
+<!--            menu-->
+<!--            </span>-->
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto ms-auto mb-2 mb-lg-0">
