--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                     <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Kinh tế
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang kinh tế</a></li>
                         <li>
                             <hr class="dropdown-divider">
@@ -47,11 +47,11 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Sống
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown2">
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/thecup/template/life.html">Trang Sống</a></li>
                         <li>
                             <hr class="dropdown-divider">
@@ -60,11 +60,11 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown3" role="button"
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
                         Công nghệ
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown3">
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/thecup/template/life.html">Trang Sống</a></li>
                         <li><a class="dropdown-item" href="#">Phân nhóm 2</a></li>
                         <li>
