change p to div in other-post, fix some css

--- a/index.html
+++ b/index.html
@@ -339,11 +339,11 @@
                                         <span class="quantity">(23)</span>
                                     </div>
                                 </div>
-                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
+                                <div class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
                                     khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
                                     tập
-                                    trung vào các ...</p>
+                                    trung vào các ...</div>
                             </div>
                         </div>
                     </div>
@@ -383,11 +383,11 @@
                                         <span class="quantity">(23)</span>
                                     </div>
                                 </div>
-                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
+                                <div class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
                                     khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
                                     tập
-                                    trung vào các ...</p>
+                                    trung vào các ...</div>
                             </div>
                         </div>
                     </div>
@@ -410,11 +410,11 @@
                                     <div class="info-seperator"></div>
                                     <span class="other-post-comment-info">0 audio</span>
                                 </div>
-                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
+                                <div class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
                                     khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
                                     tập
-                                    trung vào các ...</p>
+                                    trung vào các ...</div>
                             </div>
                         </div>
                     </div>
@@ -452,11 +452,11 @@
                                         <span class="quantity">(23)</span>
                                     </div>
                                 </div>
-                                <p class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
+                                <div class="other-post-description">Giao dịch khối ngoại là điểm trừ khi họ tiếp tục bán
                                     ròng
                                     khá mạnh với giá trị hơn 1.500 tỷ đồng trên toàn thị trường. Lực bán của khối ngoại
                                     tập
-                                    trung vào các ...</p>
+                                    trung vào các ...</div>
                             </div>
                         </div>
                     </div>
