fix css comment block

--- a/index.html
+++ b/index.html
@@ -570,12 +570,12 @@
                     </div>
                     <div class="comment-block">
                         <div class="row">
-                            <div class="col-md-2">
+                            <div class="col-2">
                                 <div class="user-avatar">
                                     <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-10">
+                            <div class="col-10">
                                 <p class="user-name">tranvanan122</p>
                                 <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
                                     hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
@@ -598,12 +598,12 @@
                     </div>
                     <div class="comment-block">
                         <div class="row">
-                            <div class="col-md-2">
+                            <div class="col-2">
                                 <div class="user-avatar">
                                     <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-10">
+                            <div class="col-10">
                                 <p class="user-name">nguyenquan</p>
                                 <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
                                     hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
@@ -626,12 +626,12 @@
                     </div>
                     <div class="comment-block">
                         <div class="row">
-                            <div class="col-md-2">
+                            <div class="col-2">
                                 <div class="user-avatar">
                                     <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-10">
+                            <div class="col-10">
                                 <p class="user-name">nguyenquan</p>
                                 <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
                                     hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
@@ -654,12 +654,12 @@
                     </div>
                     <div class="comment-block">
                         <div class="row">
-                            <div class="col-md-2">
+                            <div class="col-2">
                                 <div class="user-avatar">
                                     <img src="/thecup/resources/img/user-img/user-img-1.png" alt="">
                                 </div>
                             </div>
-                            <div class="col-md-10">
+                            <div class="col-10">
                                 <p class="user-name">nguyenquan</p>
                                 <p class="comment-text">“Bài viết hay, bổ ích mới chỉ áp dụng được một phần thôi đã thấy
                                     hiệu quả hẳn ra. Nếu áp dụng được hết chắc chắn sẽ thành công”</p>
