--- a/index.html
+++ b/index.html
@@ -1049,17 +1049,17 @@
     soundObj = {
         sound: [
             {
-                "name": "Chạm đáy nỗi đau",
-                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/ChamDayNoiDau-ERIK-5441608.mp3'"
-            },
-            {
                 "name": "Bài hát số 2",
                 "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/07fb07f66f04d123460859d7f757fae2.mp3"
             },
             {
+                "name": "Audio dùng test lỗi",
+                "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/ChamDayNoiDau-ERIK-5441608.mp31"
+            },
+            {
                 "name": "Hết thương cạn nhớ",
                 "link": "https://thecuppodcast.s3.ap-southeast-1.amazonaws.com/files/Hết Thương Cạn Nhớ - Đức Phúc [Audio Lyrics].mp3"
-            }
+            },
         ]
     };
     loadPlaylist(soundObj);
