fix loi dropdown va sua css navbar-nav-link

--- a/index.html
+++ b/index.html
@@ -34,22 +34,18 @@
                     <a class="nav-link active" aria-current="page" href="#">Trang chủ</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
-                        Kinh tế
+                    <a class="nav-link" href="/thecup/template/economy.html">Kinh tế</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
+                       data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/thecup/template/economy.html">Trang kinh tế</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Các phân nhóm khác</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
+                    <a class="nav-link" href="/thecup/template/life.html">Sống</a>
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Sống
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/thecup/template/life.html">Trang Sống</a></li>
@@ -60,9 +56,9 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
+                    <a class="nav-link" href="/thecup/template/life.html">Công nghệ</a>
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">
-                        Công nghệ
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="/thecup/template/life.html">Trang Sống</a></li>
